# II

./: .env.example  .gitignore
apps/backend/: pyproject.toml
apps/backend/src/: main.py
apps/backend/src/api/: dependencies.py
apps/backend/src/api/routes/: __init__.py  auth.py  bookmarks.py  feed.py  internal_recommendations.py  issues.py  profile.py  profile_github.py  profile_onboarding.py  profile_resume.py  recommendations.py  search.py
apps/backend/src/core/: __init__.py  audit.py  config.py  cookies.py  errors.py  oauth.py  redis.py  security.py
apps/backend/src/ingestion/: gatherer.py  github_client.py  persistence.py  quality_gate.py  rate_limiter.py  scout.py
apps/backend/src/ingestion/queries/: gatherer.graphql
apps/backend/src/middleware/: auth.py  context.py  rate_limit.py
apps/backend/src/services/: bookmark_service.py  cloud_tasks_service.py  feed_service.py  github_profile_service.py  issue_service.py  linked_account_service.py  profile_embedding_service.py  risk_assessment.py  search_cache.py  search_service.py  session_service.py  vector_generation.py
apps/backend/src/workers/: embed_worker.py  resume_worker.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: __init__.py
apps/backend/tests/integration/auth/: __init__.py  test_account_merging.py  test_auth_routes.py  test_logout.py  test_rate_limiting.py  test_session_management.py
apps/backend/tests/unit/: __init__.py
apps/frontend/: next.config.ts  package-lock.json  package.json
apps/frontend/src/lib/: fingerprint.ts
apps/workers/: pyproject.toml
(+50 files in other folders)
